k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: libresynergy
  labels:
    app.kubernetes.io/part-of: libresynergy
